<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true">

        <TextView
            android:id="@+id/startLoc"
            android:layout_width="41dp"
            android:layout_height="39dp"
            android:text="@string/startLoc" />

        <EditText
            android:id="@+id/startEdit"
            android:layout_width="225dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="6dp"
            />

        <ImageButton
            android:id="@+id/useMyLoc"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/my_location"
            android:src="@android:drawable/ic_menu_mylocation" />

        <ImageButton
            android:id="@+id/centreBtn"
            android:layout_width="47dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/centreMap"
            android:src="@drawable/osm_ic_center_map" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:text="@string/destination" />

        <EditText
            android:id="@+id/endEdit"
            android:layout_width="217dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/useMyLocEnd"
            android:layout_width="38dp"
            android:layout_height="41dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/my_location"
            android:src="@android:drawable/ic_menu_mylocation" />

    </LinearLayout>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/refreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/clearRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearRoute" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <org.osmdroid.views.MapView
        android:id="@+id/map1"
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

    </org.osmdroid.views.MapView>
</LinearLayout>
